k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: gateway
        image: gateway:local
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        volumeMounts:
          - name: tmp
            mountPath: /tmp
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: "0.2"
            memory: 1Gi
          limits:
            cpu: "1.0"
            memory: 1Gi
        startupProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 20
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          initialDelaySeconds: 0
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/info
          initialDelaySeconds: 0
          timeoutSeconds: 5
          periodSeconds: 20
          failureThreshold: 5
      volumes:
        - name: tmp
          emptyDir: {}
      serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway
  type: LoadBalancer
