k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-ingress
  namespace: ingress-nginx 
spec:
  ports:
  - name: http
    port: 6513
    protocol: TCP
    targetPort: 80
  selector:
    app: gateway-ingress
  type: LoadBalancer
